--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <img src="images/question_bank.png" alt="Question Bank Icon">
             <div class="feature-text">
                 <h3>Extensive Question Bank</h3>
-                <p>Access over 500 practice questions covering all key areas of your police promotional exam, including policy, law, and procedure.</p>
+                <p>Access over 500 practice questions covering key areas of your police promotional exam, including policy, law, and procedure.</p>
             </div>
         </div>
 
@@ -165,7 +165,7 @@
             <img src="images/progress_tracking.png" alt="Progress Tracking Icon">
             <div class="feature-text">
                 <h3>Detailed Progress Tracking</h3>
-                <p>Monitor your performance with detailed statistics and visualizations. Identify areas for improvement and track your progress over time.</p>
+                <p>Monitor your performance with detailed statistics. Identify areas for improvement and track your progress over time.</p>
             </div>
         </div>
 
@@ -183,13 +183,13 @@
 
     <section id="about" class="container">
         <h2>About Us</h2>
-        <p>Shield Study was created by current and former law enforcement officers to provide an effective and affordable way for aspiring officers to prepare for their promotional exams. We are dedicated to helping you achieve your career goals.</p>
+        <p>Shield Study was created by a former Baltimore Police Sergeant. We strive to provide an effective and affordable way for aspiring officers to prepare for their promotional exams and are dedicated to helping you achieve your career goals.</p>
     </section>
 
     <section id="contact" class="container">
       <h2>Contact</h2>
       <p>If you have any comments or questions, please reach out to us at
-      <a href="mailto:support@yourapp.com">support@yourapp.com</a></p>
+      <a href="mailto:Mclauferty@gmail.com">Mclauferty@Gmail.com</a></p>
 
     </section>
 
