--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <p>We may update this privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page and updating the "Last updated" date.</p>
         
         <h3>Contact Us</h3>
-        <p>If you have any questions about this privacy policy, please contact us at <a href="mailto:Mclauferty@gmail.com">Mclauferty@Gmail.com</a>.</p>
+        <p>If you have any questions about this privacy policy or would like to request to delete your account and information, please contact us at <a href="mailto:Mclauferty@gmail.com">Mclauferty@Gmail.com</a>.</p>
     </section>
 
     <footer>
