--- a/index.html
+++ b/index.html
@@ -146,15 +146,13 @@
     <section id="features" class="container">
         <h2>Key Features</h2>
         <div class="feature">
-            <img src="images/question_bank.png" alt="Question Bank Icon">
             <div class="feature-text">
                 <h3>Extensive Question Bank</h3>
-                <p>Access over 500 practice questions covering key areas of your police promotional exam, including policy, law, and procedure.</p>
+                <p>Access over 455 practice questions covering key areas of your police promotional exam, including policy, law, and procedure.</p>
             </div>
         </div>
 
         <div class="feature feature-reverse">
-            <img src="images/custom_quiz.png" alt="Custom Quiz Icon">
             <div class="feature-text">
                 <h3>Customizable Quizzes</h3>
                 <p>Create personalized quizzes tailored to your specific study needs. Focus on your weak areas and build confidence.</p>
@@ -162,7 +160,6 @@
         </div>
 
         <div class="feature">
-            <img src="images/progress_tracking.png" alt="Progress Tracking Icon">
             <div class="feature-text">
                 <h3>Detailed Progress Tracking</h3>
                 <p>Monitor your performance with detailed statistics. Identify areas for improvement and track your progress over time.</p>
@@ -175,8 +172,8 @@
         <h2>Simple Pricing</h2>
         <p>Choose the plan that's right for you and unlock full access to all of Shield Study's features.</p>
         <ul>
-            <li><strong>Monthly:</strong> $9.99/month (3-day free trial)</li>
-            <li><strong>Yearly:</strong> $59.99/year (3-day free trial, save 50%!)</li>
+            <li><strong>Monthly:</strong> $8/month (3-day free trial)</li>
+            <li><strong>Yearly:</strong> $40/year (3-day free trial, save 50%!)</li>
         </ul>
          <a href="#" class="cta-button">Get Started Today</a>
     </section>
@@ -205,7 +202,7 @@
         <p>We use Firebase Authentication to securely manage user accounts. Your email address is protected according to Firebase's security standards and best practices.</p>
         
         <h3>Payment Processing</h3>
-        <p>All payments are processed through Google Payment system. We do not store or have access to your payment information.</p>
+        <p>All payments are processed through Google or Apple Payment systems. We do not store or have access to your payment information.</p>
         
         <h3>Data Sharing</h3>
         <p>We do not sell, trade, or otherwise transfer your personal information to third parties. Your data is only used for the purposes stated in this policy.</p>
@@ -226,7 +223,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 Shield Study. All rights reserved.</p>
+            <p>&copy; 2025 Shield Study. All rights reserved.</p>
         </div>
     </footer>
 
